--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="banner">
     <div class="slider">
       <div class="slide">
-        <img src="assets/media/image1.png" alt="Research Image 1">
+        <img src="/assets/media/image1.png" alt="Research Image 1">
       </div>
       <div class="slide">
         <video autoplay muted loop>
