--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ https://templatemo.com/tm-598-sleeky-pro
     <section id="research" class="section research">
         <div class="section-container">
             <div class="section-header">
-                <h2 class="section-title">Our Services</h2>
+                <h2 class="section-title">My Research</h2>
                 <p class="section-subtitle">Advanced photography solutions powered by cutting-edge technology and unmatched expertise in extreme environments.</p>
             </div>
             
