Multiple pages working

--- a/index.html
+++ b/index.html
@@ -11,13 +11,25 @@
   <!-- Banner Slider -->
   <header class="banner">
     <div class="slider">
+
       <div class="slide">
-        <img src="assets/media/image1.png" alt="Research Image 1">
-        <div class="caption">
-            <h2>High Speed Flows</h2>
-            <p>Direct numerical simulation of laminar-turbulent transition in high-speed flows</p>
-        </div>
+        <video autoplay muted loop>
+          <source src="assets/media/video2.mp4" type="video/mp4">
+        </video>
+        <a href="project1.html" class="caption">
+          <h2>Active Flow Control</h2>
+          <p>Adaptive feedback control for turbulent flows over wings with real time system identification.</p>
+        </a>
       </div>
+
+      <div class="slide">
+        <img src="assets/media/image1.png" alt="Project 1">
+        <a href="project2.html" class="caption">
+          <h2>High Speed Flows</h2>
+          <p>Direct numerical simulation of laminar-turbulent transition in high-speed flows</p>
+        </a>
+      </div>
+
       <div class="slide">
         <video autoplay muted loop>
           <source src="assets/media/video1.mp4" type="video/mp4">
@@ -27,22 +39,33 @@
             <p>Inertial FTLE of bubbles in turbulent channel flow</p>
         </div>
       </div>
+
       <div class="slide">
-        <img src="assets/media/image2.png" alt="Research Image 2">
-        <div class="caption">
-            <h2>High Speed Flows</h2>
-            <p>Direct numerical simulation of laminar-turbulent transition in high-speed flows</p>
-        </div>
+        <img src="assets/media/beam.png" alt="Project 3">
+        <a href="project4.html" class="caption">
+          <h2>Orbital Drag</h2>
+          <p>Roughness resolving DSMC of spacecraft materials at LEO conditions.</p>
+        </a>
       </div>
+
       <div class="slide">
         <video autoplay muted loop>
-          <source src="assets/media/video2.mp4" type="video/mp4">
+          <source src="assets/media/wings.mp4" type="video/mp4">
         </video>
         <div class="caption">
-            <h2>Active Flow Control</h2>
-            <p>Adaptive feedback control for turbulent flows over wings with real time system identification </p>
+            <h2>Wake Dynamics</h2>
+            <p>Wake dynamics of finite aspect ratio wings at low Reynolds numbers</p>
         </div>
       </div>
+
+      <div class="slide">
+        <img src="assets/media/stability.png" alt="Project 3">
+        <a href="project3.html" class="caption">
+          <h2>Global Instabilities</h2>
+          <p>Direct and adjoint self excited global modes of finite wings</p>
+        </a>
+      </div>
+
     </div>
   </header>
 
@@ -51,6 +74,18 @@
     <h1>Dr. Your Name</h1>
     <p>Postdoctoral researcher in [your field]. My work focuses on [short description].</p>
   </section>
+
+
+  <!-- Navigation to projects -->
+  <nav class="project-nav">
+    <h2>Research Topics</h2>
+    <ul>
+      <li><a href="project1.html">Active Flow Control</a></li>
+      <li><a href="project2.html">High Speed Flows</a></li>
+      <li><a href="project3.html">Project 3</a></li>
+      <li><a href="project4.html">Project 4</a></li>
+    </ul>
+  </nav>
 
   <!-- Research -->
   <section class="research">
