--- a/index_BU.html
+++ b/index_BU.html
@@ -10,11 +10,15 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bibtex-js@2.0.0/bibtex.css">
 </head>
 
+
+
+
 <body>
 
   <!-- Banner Slider -->
   <header class="banner">
     <div class="slider">
+
       <div class="slide">
         <video autoplay muted loop>
           <source src="assets/media/video2.mp4" type="video/mp4">
@@ -68,6 +72,7 @@
           <p>Direct and adjoint self excited global modes of finite wings</p>
         </a>
       </div>
+
     </div>
   </header>
 
@@ -76,6 +81,7 @@
     <h1>Dr. Your Name</h1>
     <p>Postdoctoral researcher in [your field]. My work focuses on [short description].</p>
   </section>
+
 
   <!-- Navigation to projects -->
   <nav class="project-nav">
@@ -88,28 +94,30 @@
     </ul>
   </nav>
 
-  <!-- Bibliography -->
+  <!-- Research --> 
   <section id="bibliography">
     <h2>Bibliography</h2>
     <div id="bibtex"></div>
-
-    <!-- <script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2FQBoMnkwRdnaJs6TCK&noBootstrap=0&jsonp=1"></script> -->
-
-    <!-- jQuery (needed for BibBase filter functionality) -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-    <!-- Your own Bootstrap or custom styles -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css">
-
-    <!-- BibBase embed -->
-    <script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2FQBoMnkwRdnaJs6TCK&noBootstrap=1&jsonp=1"></script>
-
-
   </section>
+  
+  <script src="https://cdn.jsdelivr.net/npm/bibtex-js@2.0.0/bibtex.js"></script>
+  
+  <script>
+    // create a new parser instance
+    var bib = new BibtexJS.BibtexParser();
+  
+    fetch('assets/my_papers.bib')
+      .then(response => response.text())
+      .then(data => {
+        bib.setFile(data);    // load bib content
+        bib.parse();          // parse it
+        document.getElementById("bibtex").innerHTML = bib.getHTML();  // render
+      })
+      .catch(err => console.error("Failed to load bib file:", err));
+  </script>
   
 
 
-  <!-- Footer -->
   <footer>
     <div class="social-links">
       <a href="https:/linkedin.com/in/antonburtsev" target="_blank" aria-label="LinkedIn">
@@ -141,6 +149,17 @@
 
   <script src="assets/js/slider.js"></script>
 
+  <!-- Load BibTeX file and render -->
+  <script>
+    fetch('assets/my_papers.bib')   // path to your .bib file
+      .then(response => response.text())
+      .then(bibtexData => {
+        BibtexJS.parseBibTex(bibtexData, "bibtex", {
+          sort_by: "author",
+          style: "plain"   // you can use "ieee", "apa", etc.
+        });
+      });
+  </script>
   
 </body>
 </html>
