--- a/project2.html
+++ b/project2.html
@@ -13,8 +13,8 @@
       <div class="slide">
         <img src="assets/media/image1.png" alt="Project 2">
         <a href="project2.html" class="caption">
-          <h2>High Speed Flows</h2>
-          <p>Direct numerical simulation of laminar-turbulent transition in high-speed flows</p>
+          <h2>Active Flow Control 2</h2>
+          <p>Adaptive feedback control for laminar wing flows real time system identification.</p>
         </a>
       </div>
   </header>
